--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,19 +374,56 @@ body { background: var(--white); }
  * #HERO
 \*-----------------------------------*/
 
+
 .hero {
-  background-image: url("../images/hero-banner.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: hsla(0, 0%, 0%, 0.7);
-  background-blend-mode: overlay;
+  position: relative;
   display: grid;
   place-items: center;
   min-height: 600px;
   text-align: center;
   padding-top: 125px;
+  overflow: hidden; /* Ensure content doesn't overflow */
 }
+
+.hero-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1; /* Place the video behind other content */
+}
+
+.video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(16 16 16 / 23%);
+  z-index: 0; /* Overlay above the video, but below the text */
+}
+
+.container {
+  position: relative;
+  z-index: 1; /* Ensure text and buttons are above the overlay and video */
+}
+
+/*.hero {*/
+/*  background-image: url("../images/hero-banner.jpg");*/
+/*  background-repeat: no-repeat;*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  background-color: hsla(0, 0%, 0%, 0.7);*/
+/*  background-blend-mode: overlay;*/
+/*  display: grid;*/
+/*  place-items: center;*/
+/*  min-height: 600px;*/
+/*  text-align: center;*/
+/*  padding-top: 125px;*/
+/*}*/
 
 .hero-title { margin-bottom: 20px; }
 
@@ -846,6 +883,17 @@ address {
 
 .go-top:is(:hover, :focus) { opacity: 1; }
 
+.footer-bottom-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  /*color: inherit; !* Ensures the link text color matches the rest of your site *!*/
+}
+
+.footer-bottom-link img {
+  margin-right: 5px; /* Adjust spacing between logo and text */
+  height: 30px; /* Adjust logo size as needed */
+}
 
 
 
@@ -974,17 +1022,7 @@ address {
 
   .footer-bottom-list { justify-content: flex-end; }
 
-  .footer-bottom-link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    /*color: inherit; !* Ensures the link text color matches the rest of your site *!*/
-  }
 
-  .footer-bottom-link img {
-    margin-right: 5px; /* Adjust spacing between logo and text */
-    height: 30px; /* Adjust logo size as needed */
-  }
 
 }
 
