--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ body { background: var(--white); }
 .header-bottom { border-bottom: 1px solid hsla(0, 0%, 100%, 0.1); }
 
 .header-bottom .container {
-  display: flex;
+  /*display: flex;*/
   justify-content: space-between;
   align-items: center;
   padding-block: 15px;
@@ -383,6 +383,7 @@ body { background: var(--white); }
   text-align: center;
   padding-top: 125px;
   overflow: hidden; /* Ensure content doesn't overflow */
+
 }
 
 .hero-video {
@@ -403,10 +404,10 @@ body { background: var(--white); }
   width: 100%;
   height: 100%;
   background-color: rgb(16 16 16 / 23%);
-  z-index: 0; /* Overlay above the video, but below the text */
+  z-index: 1; /* Overlay above the video, but below the text */
 }
 
-.container {
+.content {
   position: relative;
   z-index: 1; /* Ensure text and buttons are above the overlay and video */
 }
@@ -971,13 +972,59 @@ address {
   /**
    * TOUR SEARCH
    */
-
   .tour-search-form {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: flex-end;
     gap: 15px;
+    grid-template-columns: 1fr; /* Default to one column for smaller screens */
   }
+
+  @media (min-width: 768px) {
+    .tour-search-form {
+      grid-template-columns: 1fr 1fr; /* Two columns for medium screens */
+    }
+  }
+
+  @media (min-width: 992px) {
+    .tour-search-form {
+      grid-template-columns: repeat(3, 1fr); /* Five columns for large screens */
+    }
+  }
+
+  .input-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+
+  .input-row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .input-wrapper label {
+    margin-bottom: 5px;
+  }
+
+  .input-field {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  .button-row {
+    margin-top: 15px;
+    grid-column: span 2; /* Button spans two columns */
+    text-align: center;
+  }
+
+  /*.tour-search-form {*/
+  /*  display: grid;*/
+  /*  grid-template-columns: 1fr 1fr;*/
+  /*  align-items: flex-end;*/
+  /*  gap: 15px;*/
+  /*}*/
 
   .tour-search-form .input-wrapper { margin-bottom: 0; }
 
@@ -1266,7 +1313,6 @@ address {
    * TOUR SEARCH
    */
 
-  .tour-search-form { grid-template-columns: repeat(5, 1fr); }
 
   .tour-search .btn {
     --padding: 15px;
