--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,7 +1196,7 @@ address {
    */
 
   .cta .container {
-    display: flex;
+    /*display: flex;*/
     justify-content: space-between;
     align-items: center;
   }
